--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,7 @@
 [editor_metadata]
 
 executable_path="F:/Godot/Godot_v4.4.1-stable_mono_win64/Godot_v4.4.1-stable_mono_win64.exe"
+use_advanced_connections=false
 
 [dialog_bounds]
 
@@ -15,7 +16,7 @@ embed_size_mode=0
 
 picker_shape=3
 color_mode=0
-recent_presets=PackedColorArray(0.431373, 1, 1, 1, 0.431373, 0.654902, 1, 1, 0.596078, 1, 1, 1, 0.596078, 0.87451, 1, 1, 0.431373, 0.654902, 0.215686, 1, 0.596078, 0.87451, 0.32549, 1)
+recent_presets=PackedColorArray(0.431373, 1, 1, 1, 0.431373, 0.654902, 1, 1, 0.596078, 1, 1, 1, 0.596078, 0.87451, 1, 1, 0.431373, 0.654902, 0.215686, 1, 0.596078, 0.87451, 0.32549, 1, 1, 1, 1, 1)
 
 [script_setup]
 
