--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Tscn/", "res://Tscn/UI/", "res://Src/", "res://Src/UI/", "res://Src/Tool/Animation/Rect/", "res://Src/GameStart/", "res://Assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://Tscn/UI/AnimaSystemExpand.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Tscn/", "res://Tscn/UI/", "res://Src/", "res://Src/UI/", "res://Src/Tool/", "res://Src/Tool/Script/", "res://Src/Tool/Script/Anima/", "res://Src/GameStart/", "res://Src/Games/", "res://Assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,12 +28,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Tscn/GameStart.tscn", "res://Tscn/UI/Exit.tscn")
-current_scene="res://Tscn/UI/Exit.tscn"
+open_scenes=PackedStringArray("res://Tscn/GameStart.tscn", "res://Tscn/UI/Exit.tscn", "res://Tscn/UI/AnimaSystemExpand.tscn", "res://Tscn/Games.tscn")
+current_scene="res://Tscn/UI/AnimaSystemExpand.tscn"
 center_split_offset=-345
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
-selected_bottom_panel_item=9
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
